# ChakraCore

./: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  BUILD.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChakraAutoConfigure.cmake  Contribution Agreement.md  ContributionAgreement.md  Future Plan.md  LICENSE.txt  README.md  RegenAllByteCode.cmd  RegenAllByteCodeNoBuild.cmd  Release 1.12 plan.md  THIRD-PARTY-NOTICES.txt  ado_build_test_runner.py  azure-pipelines.yml  build.sh  ch  dummy.cpp  dummy.txt  foo.pgd  jenkins.buildall.cmd  jenkins.buildone.cmd  jenkins.check_copyright.py  jenkins.check_copyright.sh  jenkins.check_eol.sh  jenkins.check_file_eol.sh  jenkins.testone.cmd  netci.groovy  newtonsoft.json.13.0.2 (1).nupkg  npm-shrinkwrap.json  output.txt  package.json  result.txt  spacing.yaml  startEclipse.sh  (+5 more)
RecyclerChecker/: CMakeLists.txt  FunctionBody.check.txt  RecyclerAnalyzer.cpp  RecyclerChecker.def  blah.txt
lib/: CMakeLists.txt  ChakraCoreStatic.cpp
lib/Backend/: AgenPeeps.cpp  AgenPeeps.h  AsmJsJITInfo.cpp  AsmJsJITInfo.h  BackEnd.h  BackEndOpcodeAttr.cpp  Backend.cpp  Backend.h  BackendApi.cpp  BackendOpCodeAttrAsmJs.cpp  BackendOpCodeAttrAsmJs.h  BackendOpCodeList.h  BackwardPass.cpp  BackwardPass.h  BailOut.cpp  BailOut.h  BailOutKind.h  CMakeLists.txt  CRC.h  CaseNode.cpp  CaseNode.h  Chakra.Backend.vcxproj  Chakra.Backend.vcxproj.filters  CodeGenAllocators.cpp  CodeGenAllocators.h  CodeGenNumberAllocator.cpp  CodeGenNumberAllocator.h  CodeGenWorkItem.cpp  CodeGenWorkItem.h  DbCheckPostLower.cpp  DbCheckPostLower.h  Debug.cpp  EhFrame.cpp  EhFrame.h  EhFrameCFI.inc  EmitBuffer.cpp  EmitBuffer.h  Encoder.cpp  Encoder.h  EquivalentTypeSet.cpp  (+149 more)
lib/Common/: BackendApi.h  CMakeLists.txt  ChakraCoreVersion.h  Common.h  CommonBasic.h  CommonDefines.h  CommonInl.h  CommonMin.h  CommonMinMemory.h  CommonPal.h  ConfigFlagsList.h  DefaultCommonExternalApi.cpp  DictionaryStats.h  EnumHelp.h  TemplateParameter.h  Warnings.h  arm64.h
lib/JITClient/: Chakra.JITClient.vcxproj  JITClient.h  JITClientPch.cpp  JITClientStub.c  JITManager.cpp  JITManager.h
lib/JITIDL/: Chakra.JITIDL.vcxproj  ChakraJIT.acf  ChakraJIT.h  ChakraJIT.idl  JITTypes.h
lib/JITServer/: Chakra.JITServer.vcxproj  Chakra.JITServer.vcxproj.filters  JITServer.cpp  JITServer.h  JITServerPch.cpp  JITServerPch.h  JITServerStub.c
lib/Jsrt/: CMakeLists.txt  Chakra.Jsrt.vcxproj  ChakraCommon.h  ChakraCommonWindows.h  ChakraCore.h  ChakraCoreWindows.h  ChakraDebug.h  ChakraRtDebug.h  Jsrt.cpp  JsrtCommonExports.inc  JsrtContext.cpp  JsrtContext.h  JsrtDebug.cpp  JsrtDebug.h  JsrtDebugEventObject.cpp  JsrtDebugEventObject.h  JsrtDebugManager.cpp  JsrtDebugManager.h  JsrtDebugPropertiesEnum.h  JsrtDebugUtils.cpp  JsrtDebugUtils.h  JsrtDebuggerObject.cpp  JsrtDebuggerObject.h  JsrtDiag.cpp  JsrtExternalArrayBuffer.cpp  JsrtExternalArrayBuffer.h  JsrtExternalObject.cpp  JsrtExternalObject.h  JsrtHelper.cpp  JsrtInitialize.cpp  JsrtInternal.h  JsrtPch.cpp  JsrtPch.h  JsrtRuntime.cpp  JsrtRuntime.h  JsrtSourceHolder.cpp  JsrtSourceHolder.h  JsrtThreadService.cpp  JsrtThreadService.h  TestHooksRt.h  (+1 more)
lib/Parser/: Alloc.cpp  Alloc.h  BGParseManager.cpp  BGParseManager.h  BackgroundParser.cpp  BackgroundParser.h  CMakeLists.txt  CaseInsensitive.cpp  CaseInsensitive.h  Chakra.Parser.vcxproj  CharClassifier.cpp  CharClassifier.h  CharMap.h  CharSet.cpp  CharSet.h  CharTrie.cpp  CharTrie.h  Chars.h  DebugWriter.cpp  DebugWriter.h  FormalsUtil.h  Hash.cpp  Hash.h  HashFunc.cpp  InternalCommands.h  JsScan.js  OctoquadIdentifier.cpp  OctoquadIdentifier.h  Parse.cpp  Parse.cpp.orig  Parse.h  ParseFlags.h  ParseTreeComparer.h  Parser.h  ParserCommon.h  ParserPch.h  RegexCommon.h  RegexCompileTime.cpp  RegexCompileTime.h  RegexContcodes.h  (+42 more)
lib/Runtime/: CMakeLists.txt  DetachedStateBase.h  InternalPropertyList.h  LibraryFunction.h  Runtime.h  RuntimeCommon.h  SerializableFunctionFields.h
lib/SCACore/: CMakeLists.txt  Chakra.SCACore.vcxproj  SCACore.cpp  SCACore.h  SCACorePch.cpp  SCACorePch.h  SCADeserialization.cpp  SCADeserialization.h  SCAEngine.cpp  SCAEngine.h  SCAPropBag.cpp  SCAPropBag.h  SCASerialization.cpp  SCASerialization.h  SCATypes.h  StreamHelper.cpp  StreamHelper.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
lib/WasmReader/: BaseWasmReader.h  CMakeLists.txt  Chakra.WasmReader.vcxproj  Chakra.WasmReader.vcxproj.filters  EmptyWasmByteCodeWriter.h  ModuleInfo.cpp  ModuleInfo.h  SExprParser.cpp  SExprParser.h  SExprScan.js  SExprScanner.cpp  WasmBinaryOpCodes.h  WasmBinaryOpcodes.h  WasmBinaryOpcodesSimd.h  WasmBinaryReader.cpp  WasmBinaryReader.h  WasmByteCodeGenerator.cpp  WasmByteCodeGenerator.h  WasmBytecodeGenerator.cpp  WasmBytecodeGenerator.h  WasmCustomReader.cpp  WasmCustomReader.h  WasmDataSegment.cpp  WasmDataSegment.h  WasmElementSegment.cpp  WasmElementSegment.h  WasmFunctionInfo.cpp  WasmFunctionInfo.h  WasmGlobal.cpp  WasmGlobal.h  WasmKeywordSwitch.h  WasmKeywordTypes.h  WasmKeywords.h  WasmLimits.h  WasmModule.cpp  WasmModule.h  WasmParseTree.cpp  WasmParseTree.h  WasmReader.h  WasmReaderBase.h  (+12 more)
lib/common/: BackEndAPI.h  CMakeLists.txt  Common.h  CommonBasic.h  CommonDefines.h  CommonMin.h  CommonMinMemory.h  CommonPal.h  ConfigFlagsList.h
lib/jsrt/: Chakra.Jsrt.vcxproj  Jsrt.cpp  JsrtCommonExports.inc  JsrtDebugEventObject.cpp  JsrtDebugEventObject.h  JsrtDebugPropertiesEnum.h  JsrtDebugUtils.cpp  JsrtDebugUtils.h  JsrtDebuggerObject.cpp  JsrtDebuggerObject.h  chakracommon.h  chakrartdebug.h  jsrtRuntime.cpp  jsrtRuntime.h  jsrtdebug.cpp  jsrtdebug.h  jsrtdiag.cpp
lib/wabt/: .gitignore  .style.yapf  CMakeLists.txt  LICENSE  README.md  ubsan.blacklist  wabt.vcxproj  wabt.vcxproj.filters
test/: CMakeLists.txt  ci.build.cmd  ci.build.init.cmd  ci.buildone.cmd  ci.parsetestargs.cmd  ci.testone.cmd  jenkins.build.cmd  jenkins.build.init.cmd  jenkins.buildall.cmd  jenkins.buildone.cmd  jenkins.parsetestargs.cmd  jenkins.testall.cmd  jenkins.testone.cmd  rlexedirs.xml  runcitests.cmd  runnativetests.cmd  runtests.cmd  runtests.py  runtests.sh
(+7284 files in other folders)
